--- a/.config/sway/config
+++ b/.config/sway/config
@@ -243,6 +243,7 @@ output eDP-1 scale 1
 #
     assign [class="Firefox"] $workspace1
     assign [class="Atom"] $workspace3
+    assign [class="Chromium"] $workspace3
     assign [class="Slack"] $workspace4
 
 #
