Add custom i3blocks scripts

--- a/.config/sway/i3blocks.conf
+++ b/.config/sway/i3blocks.conf
@@ -32,10 +32,18 @@ markup=none
 #
 # This displays "ARTIST - SONG" if a music is playing.
 # Supported players are: spotify, vlc, audacious, xmms2, mplayer, and others.
-[mediaplayer]
+#[mediaplayer]
+#label=
+#instance=spotify
+#interval=5
+#signal=10
+
+# Custom mediaplayer script
+[mediaplayer2]
+command=~/.i3blocks/mediaplayer2
 label=
 instance=spotify
-interval=5
+interval=1
 signal=10
 
 # Disk usage
@@ -77,12 +85,19 @@ separator=true
 # The first parameter sets the step (and units to display)
 # The second parameter overrides the mixer selection
 # See the script for details.
-[volume]
-label=
+#[volume]
+#label=
+#instance=Master
+#interval=1
+#signal=10
+#command=/usr/lib/i3blocks/volume
+
+# Custom volume script
+[volume2]
 instance=Master
 interval=1
 signal=10
-command=/usr/lib/i3blocks/volume 
+command=~/.i3blocks/volume2
 
 # Memory usage
 #
@@ -111,8 +126,14 @@ command=/usr/lib/i3blocks/volume
 # Battery indicator
 #
 # The battery instance defaults to 0.
-[battery]
-label=
+#[battery]
+#label=
+#instance=0
+#interval=30
+
+# Custom battery script
+[battery2]
+command=~/.i3blocks/battery2
 instance=0
 interval=30
 
