--- a/.config/sway/config
+++ b/.config/sway/config
@@ -29,7 +29,7 @@ set $menu rofi -show run -lines 3 -eh 2 -width 100 -padding 800 -color-window "$
 ### Output configuration
 #
 # Default wallpaper (more resolutions are available in /usr/share/backgrounds/sway/)
-output * bg /usr/share/backgrounds/sway/paul-klee-rocky-landscape.jpg fill
+output * bg ~/photos/wallpapers/paul-klee-rocky-landscape.jpg fill
 #
 # Example configuration:
 #
@@ -214,7 +214,7 @@ mode "resize" {
 bindsym $mod+r mode "resize"
 
 #
-# Status Bar:
+# Status Bar
 #
 # Read `man 5 sway-bar` for more information about this section.
 bar {
@@ -236,7 +236,7 @@ output eDP-1 scale 1
 # Custom Key Bindings:
 #
     # Lock screen
-    bindsym $mod+Shift+x exec swaylock --color "$bg-color"
+    bindsym $mod+Shift+x exec swaylock -i ~/photos/wallpapers/paul-klee-rocky-landscape.jpg --scaling fill --insidecolor "$bg-color" --insidevercolor "$bg-color" --keyhlcolor "$text-color" --linecolor "$inactive-text-color" -r --ringcolor "$inactive-text-color"
 
 #
 # Workspace App Assignments:
